syntax = "proto3";

package soldr.v1;

option go_package = "test_protos/soldr/v1;v1";

import "google/protobuf/field_mask.proto";

message Address {
  string line1 = 1;
  string line2 = 2;
}

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 4;
  Address primary_address = 5;
  repeated Address secondary_addresses = 6;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
 User user = 1;
}

message UpdateUserRequest {
  User user = 1;
  google.protobuf.FieldMask update_mask = 2;
}

message UpdateUserResponse {
  User user = 1;
}
